# nfluxai

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  start.sh
data/index/: index.json
data/textbooks/内科护理学/: 内科护理学_01_第一章_绪论.md  内科护理学_02_第二章_呼吸系统疾病病人的护理.md  内科护理学_03_第三章_循环系统疾病病人的护理.md  内科护理学_04_第四章_消化系统疾病病人的护理.md  内科护理学_05_第五章_泌尿系统疾病病人的护理.md  内科护理学_06_第六章_血液系统疾病病人的护理.md  内科护理学_07_第七章_内分泌与代谢性疾病病人的护理.md  内科护理学_08_第八章_风湿性疾病病人的护理.md  内科护理学_09_第九章_神经系统疾病病人的护理.md  内科护理学_10_附录_内科护理学中英文名词对照索引.md
data/textbooks/外科护理学/: 外科护理学_01_第一章_绪论.md  外科护理学_02_第二章_水、电解质代谢紊乱和酸碱平衡失调病人的护理.md  外科护理学_03_第三章_外科休克病人的护理.md  外科护理学_04_第四章_外科营养支持病人的护理.md  外科护理学_05_第五章_手术室管理和工作.md  外科护理学_06_第六章_麻醉病人的护理.md  外科护理学_07_第七章_手术前后病人的护理.md  外科护理学_08_第八章_外科感染病人的护理.md  外科护理学_09_第九章_损伤病人的护理.md  外科护理学_10_第十章_肿瘤病人的护理.md  外科护理学_11_第十一章_移植病人的护理.md  外科护理学_12_第十二章_颅内压增高及脑疝病人的护理.md  外科护理学_13_第十三章_颅脑损伤病人的护理.md  外科护理学_14_第十四章_颅内和椎管内血管性疾病病人的护理.md  外科护理学_15_第十五章_颅内和椎管内肿瘤病人的护理.md  外科护理学_16_第十六章_颈部疾病病人的护理.md  外科护理学_17_第十七章_乳房疾病病人的护理.md  外科护理学_18_第十八章_胸部损伤病人的护理.md  外科护理学_19_第十九章_胸壁、胸膜疾病病人的护理.md  外科护理学_20_第二十章_肺部疾病病人的护理.md  外科护理学_21_第二十一章_食管疾病病人的护理.md  外科护理学_22_第二十二章_心脏大血管疾病病人的护理.md  外科护理学_23_第二十三章_急性化脓性腹膜炎病人的护理.md  外科护理学_24_第二十四章_腹外疝病人的护理.md  外科护理学_25_第二十五章_腹部损伤病人的护理.md  外科护理学_26_第二十六章_胃十二指肠疾病病人的护理.md  外科护理学_27_第二十七章_小肠疾病病人的护理.md  外科护理学_28_第二十八章_阑尾炎病人的护理.md  (+17 more)
docs/: CODE_REVIEW.md  CONFIG_GUIDE.md  INDEX_DESIGN.md
scripts/: copy_textbooks.py
src/: app.py  ingest.py  ingest_simple.py  llm.py  medical_terms.py  model_clients.py  retriever.py  test.py  test_flow.py  viewer.py
(+21 files in other folders)
